--- a/style/biologi.css
+++ b/style/biologi.css
@@ -16,8 +16,8 @@
 .sentrale-temaer > ul {
     -webkit-padding-start: 0;
     padding-block: 1vw;
-    padding: 0 !important;
+    padding: 0;
 }
 .sentrale-temaer li {
-    padding: 1vw !important;
+    padding: 1vw;
 }
