--- a/style/biologi.css
+++ b/style/biologi.css
@@ -46,3 +46,8 @@
 .mer-informasjon {
     background-color: var(--biologi_grønn) !important; 
 }
+iframe {
+    width: 100%;
+    height: 520px;
+    border: none;
+}
