--- a/programfag/biologi/biologi.css
+++ b/programfag/biologi/biologi.css
@@ -6,13 +6,13 @@
 }
 /* bakgrunnsbilde øverst på side */
 #forside-bilde {
-    background-image: url("/Fagvalgsider_Elvebakken_VGS/assets/imgs/biologi/dna.png"); /* her kan bildet endres */
+    background-image: url("../../assets/imgs/biologi/dna.png"); /* her kan bildet endres */
 }
 .visuelt-element {
-    background-image: url("/Fagvalgsider_Elvebakken_VGS/assets/imgs/biologi/blodceller.png"); /* bilde kan byttes ut */
+    background-image: url("../../assets/imgs/biologi/blodceller.png"); /* bilde kan byttes ut */
 }
 #fagnummer2 .visuelt-element {
-    background-image: url("/Fagvalgsider_Elvebakken_VGS/assets/imgs/biologi/sommerfugler.png"); /* bilde kan byttes ut */
+    background-image: url("../../assets/imgs/biologi/sommerfugler.png"); /* bilde kan byttes ut */
 }
 /*Liste over sentrale temaer*/
 .sentrale-temaer > ul > li {
